--- a/index.html
+++ b/index.html
@@ -1,13 +1,57 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
+
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <meta charset="UTF-8">
+    <title>Patitas - Adopta una mascota</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/inicio.css">
+    <script type="module" src="js/inicio.js"></script>
   </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
-  </body>
+      
+<body>
+
+<div class="container d-flex justify-content-center align-items-center vh-100">
+
+    <form method="post">
+        <div class="card" style="width: 25rem;">
+        <div class="card-body">
+            <h5 class="card-title text-center" style="font-weight: bold;">LOGIN</h5>
+
+        <div id="msgError" class="alert alert-danger" role="alert" style="display: none; ">
+            <span>Texto de prueba</span>
+        </div>
+        <div id="msgSuccess" class="alert alert-success" role="alert" style="display: none;">
+        </div>
+    
+        <div class="mb-3">
+            <select id="tipoDocumento" name="tipoDocumento" class="form-select">
+                <option selected>Tipo documento</option>
+                <option value="1">DNI</option>
+                <option value="2">CEX</option>
+                <option value="3">PAS</option>
+            </select>
+        </div>
+
+        <div class="mb-3">
+            <input type="text" id="numeroDocumento" name="numeroDocumento" placeholder="Número documento"
+                   class="form-control" maxlength="8">
+        </div>
+
+        <div class="mb-3">
+            <input type="password" id="password" name="password" placeholder="Password"
+                   class="form-control">
+        </div>
+
+        <div class="d-grid">
+            <button id="btnIngresar" type="button" class="btn btn-primary" style="font-size: 15px; font-weight: bold;">INGRESAR</button>
+        </div>
+        </div>
+    </div>
+    </form>
+
+</div>
+
+</body>
 </html>
